# Selfynk

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  mypy.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 08e18b3b4522_initial_migration.py
backend/app/: config.py  database.py  main.py
backend/app/agents/: analyst.py  base.py  legacy_vision.py  memory_extractor.py  utils.py
backend/app/models/: __init__.py  analysis.py  brand_dna.py  content.py  credibility.py  desired_brand.py  input_entry.py  network_log.py  perception.py  values.py  voice_sample.py
backend/app/routers/: analysis.py  input.py  onboarding.py
backend/app/schemas/: analysis.py  input.py  onboarding.py
backend/app/services/: analysis_service.py  input_service.py  job_store.py
backend/tests/: conftest.py  test_agents_base.py  test_analysis.py  test_config.py  test_health.py  test_input.py  test_input_service.py  test_legacy_vision.py  test_memory_extractor.py  test_onboarding.py
frontend/: Dockerfile  package-lock.json  package.json  vitest.config.ts
frontend/app/: layout.tsx  page.test.tsx  page.tsx
frontend/app/capture/: page.test.tsx  page.tsx
frontend/app/onboarding/: page.test.tsx  page.tsx
frontend/components/analysis/: AnalysisPanel.test.tsx  AnalysisPanel.tsx  (+2 more)
frontend/lib/: api.ts  sse.ts
frontend/store/: import-job.ts  onboarding.test.ts  onboarding.ts
frontend/types/: index.ts
(+37 files in other folders)
