[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno==2.5.14",
    "alembic==1.18.4",
    "anthropic==0.89.0",
    "fastapi==0.135.3",
    "openai==2.30.0",
    "psycopg2-binary==2.9.11",
    "pydantic-settings==2.13.1",
    "sqlmodel==0.0.38",
    "uvicorn[standard]==0.43.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "mypy==1.20.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.9",
]
